2008-04-27  Daiki Ueno  <ueno@unixuser.org>

	* epa-file.el (auto-encryption-mode): Rename from epa-file-mode.
	(epa-file-handler): Put 'safe-magic and 'operations properties.

	* epa.el (epa-global-minor-modes, epa-mode, epa-menu)
	(epa-menu-items): Remove.

	* epa-dired.el (epa-dired-do-decrypt, epa-dired-do-verify)
	(epa-dired-do-sign, epa-dired-do-encrypt): Add autoload cookie.
	(epa-dired-mode, epa-global-dired-mode): Remove.

	* dired.el (dired-mode-map): Bind encryption/decryption commands.

	* menu-bar.el (menu-bar-encryption-decryption-menu): New menu item.

	* files.el (insert-file-contents-literally): Inhibit epa-file-handler.

2008-04-27  Glenn Morris  <rgm@gnu.org>

	* textmodes/reftex-global.el (reftex-isearch-switch-to-next-file):
	Remove un-needed local `orig-list'.  Replace cl `copy-list'.

2008-04-27  Carsten Dominik  <dominik@science.uva.nl>

	* org/org.el (org-html-level-start): Always have id's in HTML
	(org-export-as-html): Use `org-link-protocols' to
	retrieve the export form of the link.
	(org-add-link-type): Final parameter renamed from PUBLISH.  Better
	documentation of how it is to be used.  Avoid double entries for
	the same link type.
	(org-add-link-props): New function.
	(org-modules-loaded): New variable.
	(org-load-modules-maybe, org-set-modules): New function.
	(org-modules): New option.
	(org-mode, org-cycle, orgstruct-mode, org-run-like-in-org-mode)
	(orgtbl-mode, org-store-link, org-insert-link-global)
	(org-open-at-point): Call `org-load-modules-maybe'.
	(org-search-view): Add more text properties.
	(org-agenda-schedule, org-agenda-deadline): Allow also in
	search-type agendas.
	(org-search-view): Order of arguments has been changed.
	Interpret prefix-arg as TODO-ONLY.
	(org-agenda, org-run-agenda-series, org-agenda-manipulate-query):
	Take new argument order of `org-search-view' into account.
	(org-todo-only): New variable.
	(org-search-syntax-table): New variable and function.